# rhei

./: .gitignore  .pre-commit-config.yaml  .rustfmt.toml  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  panta-deliberation-values.yaml  release-plan.md
.agents/: grund.toml
crates/rhei-agent-core/: Cargo.toml
crates/rhei-agent-core/src/: lib.rs
crates/rhei-cli/: Cargo.toml
crates/rhei-cli/assets/skills/rhei-plan-worker/: SKILL.md
crates/rhei-cli/assets/skills/rhei-plan-writer/: SKILL.md
crates/rhei-cli/assets/skills/rhei-plan-writer/references/examples/: minimal-plan.rhei.md
crates/rhei-cli/assets/skills/rhei-plan-writer/references/examples/directory-workspace/: index.rhei.md
crates/rhei-cli/assets/skills/rhei-state-machine-writer/: SKILL.md
crates/rhei-cli/assets/skills/rhei-template-writer/: SKILL.md
crates/rhei-cli/src/: main.rs
crates/rhei-cli/src/cli/: accounting.rs  agent_command.rs  agent_resolution.rs  agent_spawn.rs  artifacts.rs  batch_run_command.rs  checkout_roots.rs  cli_declarations.rs  cli_dispatch.rs  complete_reset_commands.rs  complete_reset_rewrites.rs  completion_candidates.rs  completion_context.rs  diagnostics.rs  install_skill_agents.rs  intervene.rs  intervene_command.rs  lsp.rs  metadata_conditions.rs  metadata_rewrite.rs  next_command.rs  panta.rs  programs.rs  ready_transition.rs  run_agent_mode.rs  run_callback_mode.rs  run_command.rs  run_diag.rs  run_failure_transitions.rs  run_git_consistency.rs  run_helpers.rs  run_options.rs  run_summary.rs  settings_load_validate.rs  settings_types.rs  snapshot_continue_lock.rs  snapshot_list_show.rs  snapshot_records.rs  snapshot_refs_gc.rs  snapshot_runtime_emit.rs  (+22 more)
crates/rhei-cli/src/main_parts/: agent_command.rs  agent_resolution.rs  agent_spawn.rs  cli_1.rs  cli_2.rs  complete_reset_1.rs  complete_reset_2.rs  completions_1.rs  metadata_1.rs  metadata_2.rs  next_command.rs  programs.rs  ready_transition.rs  render_install_1.rs  run_agent_mode.rs  run_callback_mode.rs  run_command.rs  run_helpers.rs  settings_1.rs  settings_2.rs  snapshot_runtime_1.rs  snapshot_runtime_2.rs  snapshots_1.rs  snapshots_3.rs  snapshots_4.rs  system_transitions_1.rs  system_transitions_2.rs  templates_3.rs  tests_1.rs  tests_2.rs  tests_3.rs  tests_4.rs  tests_5.rs  tests_6.rs  tests_7.rs  tooling_1.rs  transition_1.rs  transition_checks.rs
crates/rhei-cli/tests/: integration_markdown_plans.rs
crates/rhei-cli/tests/e2e/: completions_tests.rs  examples_tests.rs  install_skills_tests.rs  mod.rs  next_tests.rs  panta_tests.rs  run_tests.rs  snapshot_tests.rs  template_example_sync_tests.rs  templates_tests.rs  transition_tests.rs  validate_retry_cache_tests.rs
crates/rhei-cli/tests/e2e/fixtures/bash-agent-team/: README.md  index.rhei.md  workflow.sh
crates/rhei-cli/tests/e2e/fixtures/bash-agent-team/tasks/: 01-brief.md  02-research.md  03-implementation.md
crates/rhei-cli/tests/e2e/fixtures/living-review-loop/: index.rhei.md  team-states.yaml  workflow.sh
crates/rhei-cli/tests/integration_markdown_plans/: callbacks_2.rs  callbacks_execution.rs  callbacks_redirect_context.rs  common.rs  reset.rs  run_1.rs  run_2.rs  run_agent_regressions.rs  run_basic.rs  run_programs_callbacks.rs  transitions_1.rs  transitions_2.rs  transitions_failures_completion.rs  transitions_success.rs  validation_1.rs  validation_cli_basics.rs  validation_parse_errors.rs  workspace_2.rs  workspace_validation.rs
crates/rhei-core/: Cargo.toml
crates/rhei-core/src/: ast.rs  callback.rs  lexer.rs  lib.rs  parser.rs  text.rs  tokens.rs  workspace.rs
crates/rhei-core/src/parser/: builder.rs  plan.rs  plan_tests.rs  recovery.rs  workspace.rs  workspace_tests.rs
crates/rhei-core/tests/: fixtures.rs  lexer_edge_cases.rs  lexer_smoke.rs
crates/rhei-napi/: Cargo.toml  build.rs
crates/rhei-napi/src/: lib.rs
crates/rhei-output/: Cargo.toml
crates/rhei-output/src/: common.rs  github.rs  json.rs  lib.rs  progress.rs  tests.rs
crates/rhei-tui/: Cargo.toml
crates/rhei-tui/src/: dashboard.rs  event.rs  frontend.rs  journal.rs  lib.rs  stdout.rs  tui.rs
crates/rhei-tui/src/dashboard/: html.rs  state.rs  tests.rs
crates/rhei-tui/src/tui/: derive.rs  input.rs  render.rs  state.rs  tests.rs  text.rs  theme.rs  views.rs
crates/rhei-validator/: Cargo.toml
crates/rhei-validator/src/: default-states.yaml  lib.rs
crates/rhei-validator/src/lib_parts/: preamble.rs  state_machine_runtime_validation.rs  state_machine_snapshots.rs  tests_poll.rs  tests_profiles.rs  validator_entry.rs
crates/rhei-validator/src/validator/: preamble.rs  state_defs.rs  state_machine_impl.rs  state_machine_profiles.rs  state_machine_snapshots.rs  tests_links_tooling.rs  tests_plan_validation.rs  tests_profiles.rs  tests_snapshots.rs  tests_state_machine.rs  validation_helpers.rs  validator_entry.rs  validator_links.rs
crates/rhei-viz/: Cargo.toml
crates/rhei-viz-model/: Cargo.toml
crates/rhei-viz-model/assets/: flow.html
crates/rhei-viz-model/src/: lib.rs
crates/rhei-viz/src/: collect.rs  lib.rs
docs/: agent-orchestrator-workflow.md  changelog.md  comparison.md  formal-state-transitions.md  goals.md  grund.md  how-rhei-is-used.md  markdown-plan-compiler.md  overview.md  plan-language-spec.md  plan-language-usage.md  pm-review-2026-04-22.md  release.md  rhei-vs-beads.md  rhei.spec.md  roadmap.md  state-machine-spec.md  state-machine.yaml  states-spec.md  states.yaml  transition-callback-examples.md
e2e/: README.md
examples/: README.md  escaped-state-values.rhei.md  escaped-state-values.saga.md  human-review-loop.rhei.md  human-review-loop.saga.md  pm-onboarding-experiment.rhei.md  release-automation.rhei.md  release-automation.saga.md  states-with-spaces.yaml
panta-deliberation/: index.rhei.md  states.yaml
scripts/: check-no-claude-attribution.sh  check-registry-names.sh  check_changelog_pr_entry.py  pgo-build.sh  prepare_changelog_release.py  release-all.sh  set-release-version.py  verify-release-version.py
xtask/: Cargo.toml
xtask/assets/: viz-template.html
xtask/src/: main.rs  viz.rs
(+527 files in other folders)
