[workspace]
members = [
    "crates/rhei-core",
    "crates/rhei-agent-core",
    "crates/rhei-cli",
    "crates/rhei-napi",
    "crates/rhei-tui",
    "crates/rhei-validator",
    "crates/rhei-output",
    "xtask",
]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.82"
repository = "https://github.com/vjovanov/rhei"
homepage = "https://github.com/vjovanov/rhei"
keywords = ["markdown", "planning", "agents", "workflow"]

[workspace.dependencies]
pretty_assertions = "1"
