[package]
name = "xtask"
version = "0.0.0"
edition.workspace = true
publish = false
license.workspace = true

[dependencies]
rhei-core = { package = "rhei-plan-core", path = "../crates/rhei-core", version = "=0.1.0-alpha.1" }
rhei-validator = { package = "rhei-cli-validator", path = "../crates/rhei-validator", version = "=0.1.0-alpha.1" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bin]]
name = "xtask"
path = "src/main.rs"
