[package]
name = "xtask"
version = "0.0.0"
edition.workspace = true
publish = false
license.workspace = true

[dependencies]
rhei-core = { package = "rhei-plan-core", path = "../crates/rhei-core", version = "=0.1.0" }
rhei-validator = { package = "rhei-cli-validator", path = "../crates/rhei-validator", version = "=0.1.0" }
rhei-viz = { package = "rhei-cli-viz", path = "../crates/rhei-viz", version = "=0.1.0" }
rhei-viz-model = { package = "rhei-cli-viz-model", path = "../crates/rhei-viz-model", version = "=0.1.0" }

[[bin]]
name = "xtask"
path = "src/main.rs"
