[package]
name = "rhei-cli"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
rhei-core = { path = "../rhei-core" }
rhei-validator = { path = "../rhei-validator" }
rhei-output = { path = "../rhei-output" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
miette = { version = "7", default-features = false, features = ["fancy-no-backtrace", "derive"] }
notify = "6"
serde_json = "1"
serde_yaml = "0.9"
fs2 = "0.4.3"
tempfile = "3.27.0"

[[bin]]
name = "rhei"
path = "src/main.rs"
