[package]
name = "rhei-cli"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
rhei-core = { path = "../rhei-core" }
rhei-validator = { path = "../rhei-validator" }
rhei-output = { path = "../rhei-output" }
rhei-tui = { path = "../rhei-tui" }
clap = { version = "=4.5.60", features = ["derive"] }
clap_complete = { version = "=4.5.60", features = ["unstable-dynamic"] }
# `cargo install --path` ignores the workspace lockfile, so pin clap_lex to a
# Cargo 1.82-compatible release instead of letting resolution float to 1.1.x.
clap_lex = "=1.0.0"
anyhow = "1"
miette = { version = "7", default-features = false, features = ["fancy-no-backtrace", "derive"] }
minijinja = "2"
notify = "6"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
fs2 = "0.4.3"
tempfile = "3.27.0"
nix = { version = "0.29", features = ["signal", "process"] }

[[bin]]
name = "rhei"
path = "src/main.rs"
