[package]
name = "rhei-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
description = "Command-line interface for validating, running, and rendering Rhei markdown plans."

[dependencies]
rhei-core = { package = "rhei-plan-core", path = "../rhei-core", version = "=0.1.0" }
rhei-validator = { package = "rhei-cli-validator", path = "../rhei-validator", version = "=0.1.0" }
rhei-output = { package = "rhei-cli-output", path = "../rhei-output", version = "=0.1.0" }
rhei-tui = { package = "rhei-cli-tui", path = "../rhei-tui", version = "=0.1.0" }
clap = { version = "=4.5.60", features = ["derive"] }
clap_complete = { version = "=4.5.60", features = ["unstable-dynamic"] }
# `cargo install --path` ignores the workspace lockfile, so pin clap_lex to a
# Cargo 1.82-compatible release instead of letting resolution float to 1.1.x.
clap_lex = "=1.0.0"
anyhow = "1"
# Constrain serde_yaml's transitive resolver for Rust 1.82-compatible package verification.
indexmap = { version = "=2.2.6", features = ["serde"] }
miette = { version = "7", default-features = false, features = ["fancy-no-backtrace", "derive"] }
minijinja = "2"
notify = "6"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
fs2 = "0.4.3"
tempfile = "3.27.0"
nix = { version = "0.29", features = ["signal", "process"] }

[[bin]]
name = "rhei"
path = "src/main.rs"
