[package]
name = "rhei-plan-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
description = "Core plan model and primitives for the Rhei agent runtime."

[lib]
name = "rhei_core"
path = "src/lib.rs"

[dependencies]
# Constrain serde_yaml's transitive resolver for Rust 1.82-compatible package verification.
indexmap = { version = "=2.2.6", features = ["serde"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

[dev-dependencies]
serde_json = "1"
