[package]
name = "rhei-api"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
description = "Native N-API implementation for Rhei API packages."
publish = false

[build-dependencies]
napi-build = "=2.2.3"

[lib]
name = "rhei_napi"
crate-type = ["cdylib"]

[dependencies]
rhei-core = { package = "rhei-plan-core", path = "../rhei-core", version = "=0.1.0" }
napi = "2"
napi-derive = "2"
