[package]
name = "rhei-cli-output"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
description = "JSON, Markdown, and terminal progress renderers for Rhei markdown plans."

[lib]
name = "rhei_output"
path = "src/lib.rs"

[dependencies]
rhei-core = { package = "rhei-plan-core", path = "../rhei-core", version = "=0.1.0-alpha.1" }
serde_json = "1"
