[package]
name = "rhei-cli-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
description = "Terminal UI event surface and frontend for Rhei run monitoring."

[lib]
name = "rhei_tui"
path = "src/lib.rs"

[dependencies]
rhei-viz-model = { package = "rhei-cli-viz-model", path = "../rhei-viz-model", version = "=0.1.0" }
crossbeam-channel = "0.5"
crossterm = "0.27"
nix = { version = "0.29", features = ["signal"] }
ratatui = "0.26"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Constrain ratatui's transitive resolver for Rust 1.82-compatible package verification.
unicode-segmentation = "=1.12.0"

[dev-dependencies]
tempfile = "3"
