[package]
name = "rhei-cli-validator"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
description = "Semantic validation for Rhei markdown plans and YAML state machines."

[lib]
name = "rhei_validator"
path = "src/lib.rs"

[dependencies]
rhei-core = { package = "rhei-plan-core", path = "../rhei-core", version = "=0.1.0-alpha.1" }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
indexmap = { version = "=2.2.6", features = ["serde"] }
regex = "1"

[dev-dependencies]
tempfile = "3"
