[package]
name = "rhei-validator"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
rhei-core = { path = "../rhei-core" }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
indexmap = { version = "=2.2.6", features = ["serde"] }
regex = "1"

[dev-dependencies]
tempfile = "3"
