[package]
name = "rhei-cli-viz-model"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
description = "Pure data model and self-contained HTML/CSS/JS renderer for the Rhei flow visualization."

[lib]
name = "rhei_viz_model"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
